# audyo-plaier

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  events.rs  main.rs
src/audyo/: service.rs
src/downloader/: client.rs  facade.rs  media_downloader.rs  mod.rs
src/ui/: donut.rs  mod.rs
