[package]
name = "audyo-plaier"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = {version="0.29.0"}
glob = "0.3.2"
ratatui = { version="0.29.0" }
rodio = { version = "0.20.1", features = ["symphonia-all"] }
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0.148"
serde = { version = "1.0.148", features = ["derive"] }
reqwest = { version = "0.12.0", features = ["stream", "json"] }
thiserror = "2.0.17"
regex-lite = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"]}
dirs = "6.0"

