[package]
name = "audyo-plaier"
version = "0.1.0"
edition = "2024"
authors = ["Y Nguyen <ndty14@gmail.com>"]
description = "YouTube media player"
license = "MIT"
repository = "https://github.com/y2141-7991/audyo-plaier/"
readme = "README.md"
keywords = ["youtube", "downloader", "audio"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
color-eyre = "0.6.5"
crossterm = {version="0.29.0", features = ["bracketed-paste"]}
glob = "0.3.2"
ratatui = { version="0.29.0", features = ["crossterm"] }
rodio = { version = "0.20.1", features = ["symphonia-all"] }
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0.148"
serde = { version = "1.0.148", features = ["derive"] }
reqwest = { version = "0.12.0", features = ["stream", "json"] }
thiserror = "2.0.17"
regex-lite = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"]}
dirs = "6.0"
rand = "0.9.2"

